# factgpt-examples

./: package-lock.json
contracts/: SimplePredictionMarket.sol
contracts/muon-utils/: MuonClientBase.sol
evm/: .env.example  hardhat.config.ts
evm/contracts/muon-utils/: MuonClientBase.sol
solana/: Anchor.toml  package-lock.json  package.json
solana/programs/fact-gpt-solana/: Cargo.toml
solana/programs/fact-gpt-solana/src/: lib.rs
solana/programs/muon/: Cargo.toml
solana/programs/muon/src/: types.rs
solana/tests/: fact-gpt-solana.ts
