[package]
name = "fact-gpt-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fact_gpt_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
muon = { path = "../muon", features = ["cpi"]}
sha3 = "0.9.1"
primitive-types = "0.10.1"
